k8s/user-app/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  namespace: user-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-frontend
  template:
    metadata:
      labels:
        app: web-frontend
    spec:
      tolerations:
        - key: nodetype
          operator: Equal
          value: user
          effect: NoSchedule
      nodeSelector:
        role: user-worker
      containers:
        - name: web-frontend
          image: PLACEHOLDER_FRONTEND_IMAGE #앱 도커 이미지 주소로 교체
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  namespace: user-app
spec:
  selector:
    app: web-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
