k8s/user-app/test-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
  namespace: user-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      tolerations:
        - key: nodetype
          operator: Equal
          value: user
          effect: NoSchedule
      nodeSelector:
        role: user-worker
      containers:
        - name: test-nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: user-app
spec:
  selector:
    app: test-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
