k8s/user-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-app-ingress
  namespace: user-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: web-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-frontend
                port:
                  number: 80
